# scada-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/attacker/: Cargo.toml
crates/attacker/src/: main.rs
crates/modbus/: Cargo.toml
crates/modbus/src/: lib.rs
crates/scada-core/: Cargo.toml
crates/scada-core/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  main.rs  tcp.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: lib.rs
