[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio      = { workspace = true }
scada-core = { path = "../scada-core" }
modbus     = { path = "../modbus" }
simulator  = { path = "../simulator" }
axum       = "0.8.8"
serde      = { workspace = true }
serde_json = "1.0.149"